Fixing text overflow issues

--- a/style.css
+++ b/style.css
@@ -326,7 +326,10 @@ span {
     border: 5px solid transparent;
     cursor: pointer;
     transition: 0.4s ease-in-out;
+    overflow-wrap: break-word;
 }
+
+
 
 .project-box:hover{
     background: white;
